--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack -w --progress",
-    "dev": "nodemon server.js",
     "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^6.6.0",
     "axios": "^0.15.3",
     "babel-core": "^6.20.0",
     "babel-loader": "^6.2.10",
@@ -20,9 +20,12 @@
     "babel-preset-react": "^6.16.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.1",
+    "classnames": "^2.2.5",
     "cors": "^2.7.1",
     "express": "^4.13.4",
     "gulp": "^3.9.1",
+    "gulp-sass": "^3.0.0",
+    "gulp-sourcemaps": "^1.9.1",
     "hbs": "^4.0.1",
     "jwt-simple": "^0.5.0",
     "mongoose": "^4.5.0",
@@ -32,6 +35,9 @@
     "passport-jwt": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
+    "postcss-js": "^0.2.0",
+    "postcss-loader": "^1.2.1",
+    "precss": "^1.4.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
