--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.20.2",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.1",
     "classnames": "^2.2.5",
@@ -39,6 +40,7 @@
     "postcss-loader": "^1.2.1",
     "precss": "^1.4.0",
     "react": "^15.4.1",
+    "react-color": "^2.11.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
