--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "postcss-js": "^0.2.0",
     "postcss-loader": "^1.2.1",
     "precss": "^1.4.0",
+    "rc-collapse": "^1.6.12",
     "react": "^15.4.1",
     "react-color": "^2.11.1",
     "react-dom": "^15.4.1",
