--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "classnames": "^2.2.5",
     "cors": "^2.7.1",
     "express": "^4.13.4",
+    "firebase": "^3.6.10",
     "gulp": "^3.9.1",
     "gulp-sass": "^3.0.0",
     "gulp-sourcemaps": "^1.9.1",
